apps/tkproster/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkproster-web
  namespace: tkproster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tkproster-web
  template:
    metadata:
      labels:
        app: tkproster-web
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: tkproster-web

      containers:
        - name: tkproster-web
          image: ghcr.io/harris-consult/tkp-traffic-web:latest
          ports:
            - containerPort: 3000
