apps/tkproster/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tkproster-web
  namespace: tkproster
spec:
  selector:
    app: tkproster-web
  ports:
    - port: 80
      targetPort: 80
